kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: ecs-www
spec:
    type: ClusterIP
    ports:
        - port: 3000
          targetPort: 3000
    selector:
        component: ecs-www-web
---
apiVersion: v1
kind: Service
metadata:
    name: ecs-www-redis
spec:
    type: ClusterIP
    ports:
        - port: 6379
          targetPort: 6379
    selector:
        component: ecs-www-redis
