kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ecs-www
    annotations:
        kubernetes.io/ingress.class: nginx
        cert-manager.io/cluster-issuer: letsencrypt
        nginx.ingress.kubernetes.io/proxy-body-size: 1G
        nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
    tls:
        - hosts:
              - layerstructure.com
              - www.layerstructure.com
          secretName: ecs-www-tls
    rules:
        - host: layerstructure.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: ecs-www
                            port:
                                number: 3000
